<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_frag_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_two"
    android:foregroundTint="@color/black"
    tools:context=".ui.admin.NewAdminFragment">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="125dp"
        android:layout_height="101dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/user_setting"
        app:layout_constraintBottom_toBottomOf="@+id/app_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/app_name_text"
        app:layout_constraintTop_toTopOf="@+id/app_name_text" />

    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="230dp"
        android:layout_height="113dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/synemono_regular"
        android:text="@string/adFrag02"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Add New Admin Box -->
    <androidx.cardview.widget.CardView
        android:id="@+id/add_admin_card"
        android:layout_width="159dp"
        android:layout_height="156dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name_text">

        <LinearLayout
            android:id="@+id/add_admin_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/add_admin_image"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/add_admin" />

            <TextView
                android:id="@+id/add_admin_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/adFrag03"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- View Users Box -->

    <!-- Manage Users Box -->
    <androidx.cardview.widget.CardView
        android:id="@+id/manage_users_card"
        android:layout_width="159dp"
        android:layout_height="156dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_admin_card">

        <LinearLayout
            android:id="@+id/manage_users_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/manage_users_image"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/human_resource" />

            <TextView
                android:id="@+id/manage_users_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/adFrag06"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/team_management_card"
        android:layout_width="159dp"
        android:layout_height="156dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_admin_card">

        <LinearLayout
            android:id="@+id/team_management_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/team_management_image"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/team_management" />

            <TextView
                android:id="@+id/team_management_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/adFrag05"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
